kubernetes/clusters/home/apps/dashboards/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: dashboards
spec:
  selector:
    app: glance
  ports:
  - port: 8080
    targetPort: 8080
